# divide-them-students

./: .gitignore  README.md  Students.txt  grouping.py  main.py  setup.cfg  student.py  tox.ini
divide_them_students/: __main__.py  commands.py  constants.py  db.py  grouping.py  main.py  student.py
testing/: basic_db_with_v_x_y.db
tests/: db_test.py  grouping_test.py  student_test.py
