[metadata]
name = divide-them-students
version = 0.1
description = CLI tool to divide students in to groups with persistence
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cheminDeFer/divide-them-students
author = Hüseyin Er
author_email = erhuseyinn@gmail.com
license = MIT
license_file = LICENSE

[options]
package = find:

python_requires = >=3.8


[options.entry_points]
console_scripts =
    divide-them-students = divide_them_students.main:main

[bdist_wheel]
universal = True
